--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,8 +1,10 @@
+@import "mocha.css";
+
 * {
 	border: none;
 	border-radius: 0;
 	box-shadow: none;
-	color: #d4be98;
+	color: @text;
 	font-family: "Symbols Nerd Font Mono", "Meslo LG S";
 	font-size: 14px;
 	margin: 0px 0px;
@@ -13,12 +15,12 @@
 }
 
 tooltip {
-	background: #282828;
-	border: 1px solid #a9b665;
+	background: @base;
+	border: 1px solid @lavender;
 }
 
 tooltip label {
-	color: #d4be98;
+	/*color: #d4be98;*/
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -32,7 +34,8 @@ tooltip label {
 }
 
 window#waybar {
-	background-color: #1b1b1b;
+    background-color: shade(@base, 0.9);
+    border: 2px solid alpha(@crust, 0.3);
 }
 
 #idle_inhibitor{ 
@@ -40,15 +43,15 @@ window#waybar {
 }
 
 #idle_inhibitor.activated{ 
-	background-color: #d4be98;
-	color: #1b1b1b;
+	/*background-color: #d4be98;*/
+	/*color: #1b1b1b;*/
 }
 
 /* sway/scratchpad */
 #scratchpad {
 	padding: 1px 0px; 
-	background-color: #e78a4e;
-	color: #282828;
+	/*background-color: #e78a4e;*/
+	/*color: #282828;*/
 }
 
 /* sway/workspaces */
@@ -56,38 +59,38 @@ window#waybar {
 }
 
 #workspaces button:hover {
-	background: #1b1b1b;
+	background: @base;
 }
 
-#workspaces button:hover.focused {
-	background: #3b4439;
-}
+/*#workspaces button:hover.focused {*/
+/*	background: @base;*/
+/*}*/
 
-#workspaces button.visible {
-	background-color: #34381b;
-}
+/*#workspaces button.visible {*/
+/*	background-color: @lavender;*/
+/*}*/
 
 #workspaces button.focused {
-	background: #3b4439;
+	background-color: @surface0;
 }
 
 #workspaces button.urgent {
-	background-color: #ea6962;
+	background-color: @red;
 }
 
-#workspaces button.visible.urgent{
-	background-color: #402120;
-}
-
-#workspaces button.urgent.focused {
-	background: #4c3432;
-}
+/*#workspaces button.visible.urgent{*/
+/*	background-color: #402120;*/
+/*}*/
+/**/
+/*#workspaces button.urgent.focused {*/
+/*	background: #4c3432;*/
+/*}*/
 
 /* sway/mode */
 #mode {
 	padding: 3px 0px;
-	background-color: #e78a4e;
-	color: #282828;
+	/*background-color: #e78a4e;*/
+	/*color: #282828;*/
 }
 
 /* sway/window */
@@ -104,16 +107,16 @@ window#waybar {
 }
 
 #tray menu {
-	background-color: #282828;
-	border: 1px solid #a9b665;
+	/*background-color: #282828;*/
+	/*border: 1px solid #a9b665;*/
 }
 
 #tray * :hover {
-	background-color: #3b4439;
+	/*background-color: #3b4439;*/
 }
 
 #tray > .needs-attention {
-	background-color: #ea6962;
+	/*background-color: #ea6962;*/
 }
 
 /* pulseaudio */
@@ -122,19 +125,19 @@ window#waybar {
 }
 
 #pulseaudio.bluetooth {
-	background-color: #7daea3;
+	/*background-color: #7daea3;*/
 }
 
 /* pulseaudio#source */
 #pulseaudio.source { 
 	padding: 2px 0px;
-	background-color: #ea6962;
-	color: #1b1b1b;
+	background-color: @red;
+	color: @base;
 }
 
 #pulseaudio.source.source-muted {
-	background-color: #1b1b1b;
-	color: #d4be98;
+	background-color: @base;
+	color: @text;
 }
 
 #network {
@@ -142,12 +145,12 @@ window#waybar {
 }
 
 #network.disconnected {
-	background-color: #ea6962;
-	color: #1b1b1b;
+	background-color: @red;
+	color: @base;
 }
 
 #network.disabled {
-	background-color: #d4be98;
+	/*background-color: #d4be98;*/
 	color: #1b1b1b;
 }
 
@@ -156,7 +159,7 @@ window#waybar {
 }
 
 #bluetooth.connected {
-	color: #7daea3;
+	/*color: #7daea3;*/
 }
 
 #cpu {
@@ -172,8 +175,8 @@ window#waybar {
 }
 
 #temperature.critical {
-	background-color: #ea6962;
-	color: #1b1b1b;
+	background-color: @red;
+	/*color: #1b1b1b;*/
 }
 
 #backlight {
@@ -186,16 +189,16 @@ window#waybar {
 }
 
 #battery.warning:not(.charging) {
-	background-color: #e78a4e;
-	color: #1b1b1b;
+	background-color: @peach;
+	/*color: #1b1b1b;*/
 }
 
 #battery.critical:not(.charging) {
-	background-color: #ea6962;
-	color: #1b1b1b;
+	background-color: @red;
+	/*color: #1b1b1b;*/
 }
 
 #clock { 
-	background-color: #d4be98;
-	color: #1b1b1b;
+	/*background-color: shade(@base, 0.9);;*/
+	/*color: @text;*/
 }
