--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -138,7 +138,7 @@ window#waybar {
 
 /* pulseaudio#source */
 #pulseaudio.source { 
-	padding: 2px 0px;
+	padding: 0px 0.3rem;
 	background-color: @red;
 	color: @base;
 }
@@ -164,6 +164,7 @@ window#waybar {
 
 #bluetooth {
 	padding: 1px 0px;
+    margin-bottom: 1rem;
 }
 
 #bluetooth.connected {
