waybar: update bluetooth and network
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -149,7 +149,8 @@ window#waybar {
 }
 
 #network {
-	padding: 2px 0px;
+        padding: 2px 0px;
+        margin-right: 0.3rem;
 }
 
 #network.disconnected {
